'wg-mgr-client.service Removed the Before to stop the systemd service getting frozen when it restarts other systemd services. Also the node.js script eliminates compatability and the need to manually adjust the systemd script with the name of the VPN or the services that may or may not be installed, that need to be restarted.'

--- a/wg-mgr-client.service
+++ b/wg-mgr-client.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Wireguard VPN config manager - Client
 After=local-fs.target nss-lookup.target network-online.target
-Before=nginx.service wg-quick@wg_router.service
+#cannot say Before=wg or nginx etc because wg-mgr-client needs to restart those IF they exist and IF it's necessary to restart them. Systemd will get stuck if you say this must run Before them.
 
 [Service]
 Type=oneshot
