'Added command 'updateRestart' that ensures that services will be restarted regardless of the config being updated. After restarting the VPN it updates otherPossibleServicesA [ ssh, nginx, mongod ]'

--- a/wg-mgr-client.service
+++ b/wg-mgr-client.service
@@ -6,7 +6,7 @@ After=local-fs.target nss-lookup.target network-online.target
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/bin/bash -c '. /root/.nvm/nvm.sh && node /opt/wg-mgr-client/wg-mgr-client*.js updateWgConf'
+ExecStart=/bin/bash -c '. /root/.nvm/nvm.sh && node /opt/wg-mgr-client/wg-mgr-client*.js updateRestart'
 WorkingDirectory=/opt/wg-mgr-client
 User=root
 
